Add "Credits" tab and GitHub contributors feature + remove version number from "Configurations" tab
